Change project title to 'Gwiz Universe' and update text
Updated project title and description in index.html.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </style>
 </head>
 <body>
-  <h1>Your Projects</h1>
-  <p>GWiz Universe</p>
+  <h1>Gwiz Universe</h1>
+  <p>enjoy! 😋</p>
 
   <div class="grid">
     <a class="card" href="https://Gwiz2077.github.io/siren/">
