--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name — Projects</title>
+  <title>GWiz2077</title>
   <style>
     body{font-family:system-ui,Arial,sans-serif;max-width:900px;margin:40px auto;padding:0 16px;line-height:1.4}
     .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:18px}
@@ -14,7 +14,7 @@
 </head>
 <body>
   <h1>Gwiz Universe</h1>
-  <p>enjoy! 😋</p>
+  <p>Enjoy! 😋</p>
 
   <div class="grid">
     <a class="card" href="https://Gwiz2077.github.io/siren/">
