Update project tags for Siren and QCII

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
   <div class="grid">
     <a class="card" href="https://Gwiz2077.github.io/siren/">
-      <strong>Siren</strong><div class="tag">Arduino / tones / UI</div>
+      <strong>Siren</strong><div class="tag">Audio generator</div>
+    </a>
+    <a class="card" href="https://Gwiz2077.github.io/QCII/">
+      <strong>Two Tone Sequential Signaller (QCII)</strong><div class="tag">Audio generator</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/catgame/">
       <strong>CatGame</strong><div class="tag">HTML game</div>
