Add link to Notes app in index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <a class="card" href="https://Gwiz2077.github.io/catgame/">
       <strong>CatGame</strong><div class="tag">HTML game</div>
     </a>
+    <a class="card" href="https://Gwiz2077.github.io/notes/">
+      <strong>Notes app</strong><div class="tag">HTML app</div>
+    </a>
     <a class="card" href="https://Gwiz2077.github.io/piano/">
       <strong>Piano app</strong><div class="tag">HTML app</div>
     </a>
