--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <strong>Two Tone Sequential Signaller (QCII)</strong><div class="tag">Audio generator</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/catgame/">
-      <strong>CatGame</strong><div class="tag">HTML game</div>
+      <strong>Cat Game</strong><div class="tag">HTML game</div>
+    </a>
+    <a class="card" href="https://Gwiz2077.github.io/Focus/">
+      <strong>White Noise and Pomodoro Timer</strong><div class="tag">Audio generator - HTML app</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/notes/">
       <strong>Notes app</strong><div class="tag">HTML app</div>
