Update card titles for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="grid">
     <a class="card" href="https://Gwiz2077.github.io/siren/">
-      <strong>Siren</strong><div class="tag">Audio generator</div>
+      <strong>Siren generator</strong><div class="tag">Audio generator</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/QCII/">
       <strong>Two Tone Sequential Signaller (QCII)</strong><div class="tag">Audio generator</div>
@@ -27,7 +27,7 @@
       <strong>Cat Game</strong><div class="tag">HTML game</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/Focus/">
-      <strong>White Noise and Pomodoro Timer</strong><div class="tag">Audio generator - HTML app</div>
+      <strong>White Noise and Pomodoro Timer app</strong><div class="tag">Audio generator - HTML app</div>
     </a>
     <a class="card" href="https://Gwiz2077.github.io/notes/">
       <strong>Notes app</strong><div class="tag">HTML app</div>
@@ -37,6 +37,9 @@
     </a>
     <a class="card" href="https://Gwiz2077.github.io/inventory/">
       <strong>Inventory app</strong><div class="tag">HTML app</div>
+    </a>
+    <a class="card" href="https://Gwiz2077.github.io/Periodic/">
+      <strong>Element Search app</strong><div class="tag">HTML app</div>
     </a>
   </div>
 
