--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <a class="card" href="https://Gwiz2077.github.io/QCII/">
       <strong>Two Tone Sequential Signaller (QCII)</strong><div class="tag">Audio generator</div>
     </a>
+      <a class="card" href="https://Gwiz2077.github.io/Geiger/">
+      <strong>Geiger counter ambiance</strong><div class="tag">Audio generator</div>
+    </a>
     <a class="card" href="https://Gwiz2077.github.io/catgame/">
       <strong>Cat Game</strong><div class="tag">HTML game</div>
     </a>
